[gd_scene load_steps=12 format=2]

[ext_resource path="res://Imagens/alarm clock, history, time, alarm, clock icon icon.png" type="Texture" id=1]
[ext_resource path="res://Imagens/Voltas.png" type="Texture" id=2]
[ext_resource path="res://Imagens/pngfind.com-damaged-car-png-3301560.png" type="Texture" id=3]
[ext_resource path="res://cena_hud.gd" type="Script" id=4]
[ext_resource path="res://Fonts/ubuntu/Ubuntu-BoldItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sons/countdoown.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.93176, 38.6406 )

[node name="Node2D" type="Node2D"]
position = Vector2( -0.594604, 0 )
scale = Vector2( 2.01196, 1.80933 )
script = ExtResource( 4 )

[node name="Tempo" type="RichTextLabel" parent="."]
margin_left = 894.275
margin_top = 559.71
margin_right = 949.275
margin_bottom = 605.71
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltas" type="RichTextLabel" parent="."]
margin_left = 536.475
margin_top = 558.367
margin_right = 578.475
margin_bottom = 604.367
custom_fonts/normal_font = SubResource( 2 )
visible_characters = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tempo_jogo" type="Timer" parent="."]

[node name="Tempo_imagem" type="Sprite" parent="."]
position = Vector2( 882.552, 570.834 )
scale = Vector2( 0.497436, -0.512556 )
texture = ExtResource( 1 )

[node name="Imagem_vida" type="Sprite" parent="."]
position = Vector2( 44.6516, 573.53 )
scale = Vector2( 0.0918438, 0.0908394 )
texture = ExtResource( 3 )

[node name="Imagem_volta" type="Sprite" parent="."]
position = Vector2( 498.193, 570.014 )
scale = Vector2( 0.101603, 0.105185 )
texture = ExtResource( 2 )

[node name="Vidas" type="RichTextLabel" parent="."]
anchor_left = 0.487
anchor_right = 0.515
margin_left = 89.1311
margin_top = 550.645
margin_right = 145.131
margin_bottom = 594.645
custom_fonts/normal_font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 17.2227
margin_top = 18.3958
margin_right = 57.2227
margin_bottom = 52.3958
custom_fonts/font = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 435.092, 497.684 )
shape = SubResource( 5 )

[node name="countdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="ready" from="Tempo_jogo" to="." method="teste"]
[connection signal="timeout" from="Tempo_jogo" to="." method="ir_para_derrota"]
[connection signal="body_entered" from="Area2D" to="." method="aumenta_tempo_volta"]
